--- a/covid19_logistic.html
+++ b/covid19_logistic.html
@@ -13143,7 +13143,7 @@ div#notebook {
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">logistic_covid</span><span class="p">,</span> 
          <span class="n">covid19_df</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">),</span>
-         <span class="n">nation</span> <span class="o">=</span> <span class="n">Dropdown</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="s1">&#39;Italy&#39;</span><span class="p">));</span>
+         <span class="n">country</span> <span class="o">=</span> <span class="n">Dropdown</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="s1">&#39;Italy&#39;</span><span class="p">));</span>
 </pre></div>
 
     </div>
@@ -13388,13 +13388,13 @@ div#notebook {
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">logistic_covid</span><span class="p">(</span><span class="n">covid19_df</span><span class="p">,</span> <span class="n">nation</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">logistic_covid</span><span class="p">(</span><span class="n">covid19_df</span><span class="p">,</span> <span class="n">country</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    df: dataframe of covid19 data with nations as columns and timestamp as index</span>
-<span class="sd">    nation: string</span>
+<span class="sd">    country: string</span>
 <span class="sd">    </span>
 <span class="sd">    &quot;&quot;&quot;</span>
-    <span class="n">df</span> <span class="o">=</span> <span class="n">covid19_df</span><span class="p">[</span><span class="n">nation</span><span class="p">]</span>
+    <span class="n">df</span> <span class="o">=</span> <span class="n">covid19_df</span><span class="p">[</span><span class="n">country</span><span class="p">]</span>
     
     <span class="n">x</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">reset_index</span><span class="p">()</span><span class="o">.</span><span class="n">index</span><span class="p">)</span>
     <span class="n">y</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">values</span><span class="p">)</span>
@@ -13412,7 +13412,7 @@ div#notebook {
 
 <span class="c1">#     print(&#39;Infection speed &#39;+str(round(a)))</span>
     <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Maximum infections occurred on &#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="n">pd</span><span class="o">.</span><span class="n">to_datetime</span><span class="p">(</span><span class="n">df</span><span class="o">.</span><span class="n">index</span><span class="p">[</span><span class="mi">0</span><span class="p">])</span> <span class="o">+</span> <span class="n">pd</span><span class="o">.</span><span class="n">to_timedelta</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">b</span><span class="p">),</span> <span class="n">unit</span><span class="o">=</span><span class="s1">&#39;D&#39;</span><span class="p">)))</span>
-    <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Total predicted infected &#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">c</span><span class="p">))</span><span class="o">+</span> <span class="s1">&#39; +-&#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">errors</span><span class="p">[</span><span class="mi">2</span><span class="p">])))</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Total predicted infections &#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">c</span><span class="p">))</span><span class="o">+</span> <span class="s1">&#39; +-&#39;</span><span class="o">+</span><span class="nb">str</span><span class="p">(</span><span class="nb">round</span><span class="p">(</span><span class="n">errors</span><span class="p">[</span><span class="mi">2</span><span class="p">])))</span>
 
     <span class="n">sol</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="n">fsolve</span><span class="p">(</span><span class="k">lambda</span> <span class="n">x</span> <span class="p">:</span> <span class="n">logistic_model</span><span class="p">(</span><span class="n">x</span><span class="p">,</span><span class="n">a</span><span class="p">,</span><span class="n">b</span><span class="p">,</span><span class="n">c</span><span class="p">)</span> <span class="o">-</span> <span class="nb">int</span><span class="p">(</span><span class="n">c</span><span class="p">),</span><span class="n">b</span><span class="p">))</span>
     <span class="n">pred_x</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="nb">range</span><span class="p">(</span><span class="nb">max</span><span class="p">(</span><span class="n">x</span><span class="p">),</span><span class="n">sol</span><span class="p">))</span>
