--- a/covid19_loglogplot.html
+++ b/covid19_loglogplot.html
@@ -13144,10 +13144,9 @@ div#notebook {
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">plot_infectionrate</span><span class="p">,</span>
          <span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">),</span>
          <span class="n">country</span> <span class="o">=</span> <span class="n">SelectMultiple</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;Belgium&#39;</span><span class="p">,</span> <span class="s1">&#39;Italy&#39;</span><span class="p">,</span> <span class="s1">&#39;Spain&#39;</span><span class="p">,</span> <span class="s1">&#39;US&#39;</span><span class="p">],</span>
-                                  <span class="n">description</span><span class="o">=</span><span class="s1">&#39;Select country(ies)&#39;</span><span class="p">,</span>
-                                  <span class="n">style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;description_width&#39;</span><span class="p">:</span> <span class="s1">&#39;initial&#39;</span><span class="p">},</span>
-                                  <span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;40%&#39;</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="s1">&#39;100px&#39;</span><span class="p">)),</span>
-         <span class="n">return_df</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="kc">False</span><span class="p">),</span>
+                                  <span class="n">description</span><span class="o">=</span><span class="s1">&#39;Select countries (Ctrl+ for multi-selection)&#39;</span><span class="p">,</span>
+                                  <span class="n">style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;description_width&#39;</span><span class="p">:</span> <span class="s1">&#39;initial&#39;</span><span class="p">},</span> <span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;50%&#39;</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="s1">&#39;100px&#39;</span><span class="p">)),</span> 
+         <span class="n">return_df</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="kc">False</span><span class="p">),</span> 
          <span class="n">return_plot</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="kc">True</span><span class="p">));</span>
 </pre></div>
 
@@ -13192,7 +13191,8 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>A smart way of visualizing how effective are the measures taken from each country to limit the infection rate. When the Y axis values drop significantly, this means that the spreading of the infections is sensibly decreased.</p>
+<p>A smart way of visualizing the effectiveness of social distancing for each country. 
+When the Y axis value (rate of infections) drops as a result of the strict measures of social distancing.</p>
 
 </div>
 </div>
@@ -13208,11 +13208,10 @@ div#notebook {
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">loglog_covid2</span><span class="p">,</span>
          <span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">),</span>
-         <span class="n">countries</span> <span class="o">=</span> <span class="n">SelectMultiple</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="n">Confirmedweeklyrates</span><span class="o">.</span><span class="n">columns</span><span class="p">,</span> <span class="n">value</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;Italy&#39;</span><span class="p">,</span> <span class="s1">&#39;Belgium&#39;</span><span class="p">,</span> <span class="s1">&#39;Spain&#39;</span><span class="p">,</span> <span class="s1">&#39;US&#39;</span><span class="p">]),</span>
-<span class="c1">#                                     description=&#39;Select countries (Ctrl+ for multi-selection)&#39;, </span>
-<span class="c1">#                                     style = {&#39;description_width&#39;: &#39;initial&#39;},</span>
-<span class="c1">#                                     layout=Layout(width=&#39;50%&#39;, height=&#39;200px&#39;)),</span>
-         <span class="p">);</span>
+         <span class="n">countries</span> <span class="o">=</span> <span class="n">SelectMultiple</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="n">Confirmedweeklyrates</span><span class="o">.</span><span class="n">columns</span><span class="p">,</span> 
+                                    <span class="n">description</span><span class="o">=</span><span class="s1">&#39;Select countries (Ctrl+ for multi-selection)&#39;</span><span class="p">,</span> 
+                                    <span class="n">style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;description_width&#39;</span><span class="p">:</span> <span class="s1">&#39;initial&#39;</span><span class="p">},</span> <span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;60%&#39;</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="s1">&#39;150px&#39;</span><span class="p">),</span>
+                                    <span class="n">value</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;Italy&#39;</span><span class="p">,</span> <span class="s1">&#39;Belgium&#39;</span><span class="p">,</span> <span class="s1">&#39;Spain&#39;</span><span class="p">,</span> <span class="s1">&#39;US&#39;</span><span class="p">]));</span>
 </pre></div>
 
     </div>
@@ -13464,7 +13463,7 @@ div#notebook {
     <span class="n">country</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">country</span><span class="p">)</span>
     <span class="n">res</span> <span class="o">=</span> <span class="n">Confirmedweeklyrates</span><span class="p">[</span><span class="n">country</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">return_plot</span> <span class="ow">is</span> <span class="kc">True</span><span class="p">:</span>
-        <span class="n">res</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
+        <span class="n">res</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">10</span><span class="p">,</span><span class="mi">5</span><span class="p">))</span>
     <span class="k">if</span> <span class="n">return_df</span> <span class="ow">is</span> <span class="kc">True</span><span class="p">:</span>
         <span class="k">return</span><span class="p">(</span><span class="n">res</span><span class="p">);</span>
 </pre></div>
@@ -13496,7 +13495,7 @@ div#notebook {
     <span class="n">axes</span><span class="o">.</span><span class="n">legend</span><span class="p">(</span><span class="n">countries</span><span class="p">)</span>
     <span class="n">axes</span><span class="o">.</span><span class="n">set_title</span><span class="p">(</span><span class="s1">&#39;Loglog&#39;</span><span class="p">)</span>
     <span class="n">axes</span><span class="o">.</span><span class="n">set_ylabel</span><span class="p">(</span><span class="s1">&#39;Weekly increase of positive cases&#39;</span><span class="p">)</span>
-    <span class="n">axes</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="s1">&#39;Total cases globally&#39;</span><span class="p">)</span>
+    <span class="n">axes</span><span class="o">.</span><span class="n">set_xlabel</span><span class="p">(</span><span class="s1">&#39;Global cases confirmed&#39;</span><span class="p">)</span>
     <span class="n">axes</span><span class="o">.</span><span class="n">set_xlim</span><span class="p">([</span><span class="mf">1e4</span><span class="p">,</span><span class="mf">1e7</span><span class="p">])</span>
 </pre></div>
 
